hphp/hack/test/typecheck/reactive/parse_missing_reactivity5.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__AtMostRxAsArgs>>
function f(): void {}
